
Feb 05, 2012 - chris ---------------------------------------------------
o the device structure (ham_device_t) was C++-ified; if you use 
    ham_env_set_device then you will have to change your code
o fixed wrong version check when loading databases from 1.1.x 

Jan 19, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0
o Changed interface ham_txn_begin, also for Wrapper APIs

Jan 05, 2012 - chris ---------------------------------------------------
o when recovery or transactions are enabled then for most operations the 
    physical log is no longer required; this reduces I/O and improves 
    performance

Dec 14, 2011 - chris ---------------------------------------------------
o dotnet: integrated the files, updated the interface

Dec 11, 2011 - chris ---------------------------------------------------
o java: integrated the files, updated the interface
o wince: moved to /contrib directory

Nov 26, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0rc3

Nov 20, 2011 - chris ---------------------------------------------------
o improved performance for duplicates, transactions and cursors

Nov 10, 2011 - chris ---------------------------------------------------
o fixed the remaining 3 known issues after lots of refactoring

Oct 11, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0rc2

Oct 09, 2011 - chris ---------------------------------------------------
o fixed a bug when erasing extended keys; sometimes this would try to
    load extended keys which do not exist (thanks, Andi Weber)

Oct 02, 2011 - chris ---------------------------------------------------
o added a new function ham_cursor_get_record_size; retrieves the record
    size of the current item

Sep 27, 2011 - chris ---------------------------------------------------