@@ -1,8 +1,9 @@
-
 Feb 05, 2012 - chris ---------------------------------------------------
 o the device structure (ham_device_t) was C++-ified; if you use 
     ham_env_set_device then you will have to change your code
 o fixed wrong version check when loading databases from 1.1.x 
+o now using the native Win32 API for os_pwrite and os_pread (thanks,
+    Andy Thalmann (http://www.softdev.ch))
 
 Jan 19, 2012 - chris ---------------------------------------------------
                       release of hamsterdb-2.0.0
